[#140641593] Fix heart display on mobile and tablet

--- a/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/partials/product-card.scss
@@ -34,11 +34,10 @@
     top: 28%;
     width: 90%;
     height: $product-card-actions-height;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    padding-top: 8px;
     background-color: rgba(255, 255, 255, 0.75);
     text-transform: uppercase;
+    text-align: center;
     color: $grey-dark;
 
     @include media-breakpoint-between(md, lg) {
@@ -68,8 +67,10 @@
     }
   }
 
-  .product-card-wish-list-heart:hover svg path {
-    fill: $brand-primary;
+  .product-card-wish-list-heart:hover svg g path {
+    @include media-breakpoint-up(lg) {
+      fill: $brand-primary;
+    }
   }
 
   .product-card-variants-carousel {
