--- a/app/assets/stylesheets/sephora_style_guide/variables/_product_card.scss
+++ b/app/assets/stylesheets/sephora_style_guide/variables/_product_card.scss
@@ -1,4 +1,4 @@
-$product-card-wish-list-heart-height: 20px;
-$product-card-wish-list-heart-width: 20px;
+$product-card-wish-list-heart-height: 40px;
+$product-card-wish-list-heart-width: 40px;
 
 $product-card-actions-height: 30px;
